hphp/hack/test/sound_dynamic/typing/supportdyn_shapes_idx.bad.php.exp
File "supportdyn_shapes_idx.bad.php", line 16, characters 34-40:
Invalid argument (Typing[4110])
  File "supportdyn_shapes_idx.bad.php", line 16, characters 21-23:
  Expected `~_` because type parameter `Tv` of `idx` could not be determined. Please add explicit type parameters to the invocation of `idx`
  File "", line 0, characters 0-0:
    via this generic `Tv`
  File "supportdyn_shapes_idx.bad.php", line 16, characters 38-38:
  But got `C`
